Finalising new TabBar widget

--- a/src/widgets/styles.css
+++ b/src/widgets/styles.css
@@ -1,16 +1,11 @@
-/* widgets */
-.ff-widget {
-  -font-family: "Courier New";
-}
-
 /* tabbar common */
 .ff-tabbar.item {
   text-align: center;
   white-space: nowrap;
-  color: black;
+  color: #333333;
 }
 .ff-tabbar.item > div {
-  /* align vertically */
+  /* align content vertically */
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -19,9 +14,6 @@
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.ff-tabbar.item {
-  color: black;
-}
 .ff-tabbar.selectedItemOverlay {
-  border-bottom: 4px solid #1185c3;
+  border-bottom: 6px solid #1185c3;
 }
