--- a/src/widgets/styles.css
+++ b/src/widgets/styles.css
@@ -1,3 +1,22 @@
+/* datepicker */
+.ff-datepicker.item {
+  text-align: center;
+}
+.ff-datepicker.item > div {
+  /* align content vertically */
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.ff-datepicker.top, .ff-datepicker.middle, .ff-datepicker.bottom {
+  pointer-events: none;
+}
+
+
 /* tabbar common */
 .ff-tabbar.item {
   text-align: center;
