Added copyright header to widgets/styles.css

--- a/src/widgets/styles.css
+++ b/src/widgets/styles.css
@@ -1,3 +1,13 @@
+/**
+ * This Source Code is licensed under the MIT license. If a copy of the
+ * MIT-license was not distributed with this file, You can obtain one at:
+ * http://opensource.org/licenses/mit-license.html.
+ *
+ * @author: Hein Rutjes (IjzerenHein)
+ * @license MIT
+ * @copyright Gloey Apps, 2015
+ */
+
 /* datepicker */
 .ff-datepicker.item {
   text-align: center;
