--- a/controls/styles.less
+++ b/controls/styles.less
@@ -11,4 +11,17 @@
       display: block;
     }
   }
+
+  &.switch {
+    &.handle {
+      box-shadow: 0 2px 7px rgba(0, 0, 0, 0.35), 0 1px 1px rgba(0, 0, 0, 0.15);
+      border-radius: 27px;
+      background-color: white;
+    }
+    &.background {
+      border-radius: 27px;
+      border-style: solid;
+      border-color: #E8E8E8;
+    }
+  }
 }
