--- a/controls/styles.less
+++ b/controls/styles.less
@@ -24,4 +24,13 @@
       border-color: #E8E8E8;
     }
   }
+
+  &.progressbar {
+    &.inside {
+      background-color: #3d59fd;
+    }
+    &.background {
+      background-color: #E8E8E8;
+    }
+  }
 }
