Work in progress gesture-recoginizers + Slider control

--- a/controls/styles.less
+++ b/controls/styles.less
@@ -22,4 +22,12 @@
       border-style: solid;
     }
   }
+
+  &.slider {
+    &.handle {
+      box-shadow: 0 2px 7px rgba(0, 0, 0, 0.35), 0 1px 1px rgba(0, 0, 0, 0.15);
+      border-radius: 27px;
+      background-color: white;
+    }
+  }
 }
