--- a/controls/styles.less
+++ b/controls/styles.less
@@ -14,6 +14,7 @@
 
   &.button {
     &.text {
+      pointer-events: none;
       .famous-dom-element-content > div {
         position: relative;
         top: 50%;
