Rotation, scale & origin

--- a/controls/styles.less
+++ b/controls/styles.less
@@ -1,4 +1,7 @@
 .ff-control {
+  -webkit-backface-visibility: hidden !important;
+  backface-visibility: hidden !important;
+
   &.label {
     .famous-dom-element-content > div {
       position: relative;
